# criativos

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTINUATION_PROMPT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.playwright-mcp/: page-2026-04-30T03-18-43-763Z.yml  page-2026-04-30T03-18-53-267Z.yml  page-2026-04-30T03-18-59-843Z.yml  page-2026-04-30T03-42-16-650Z.yml
ads/: copy.md  render.py  test_render.py
ads/templates/: 01-portfolio-grid.html  01-portfolio-grid.html.j2  02-before-after.html  02-before-after.html.j2  03-social-proof.html  03-social-proof.html.j2  04-price-objection.html  04-price-objection.html.j2  05-mockup-showcase.html  05-mockup-showcase.html.j2  06-niche-designers.html  06-niche-designers.html.j2
brand/: guidelines.css  guidelines.html  tokens.css
config/: ads.yaml  projects.yaml
deploy/: Caddyfile  README.md  criativos.nginx.conf  install.sh  test_compose.py
docs/plans/: 2026-04-29-instagram-content-factory.md  pipeline-refactor-followup.md  pipeline-refactor.md  spec-1-ai-creative-factory.md  spec-3-web-gui.md  task-9b-real-streaming.md
features/copy_generation/: CLAUDE.md  agent.py  schema.py  streaming.py  test_agent.py  test_methodologies.py  test_schema.py  test_streaming.py
features/instagram_content/: CLAUDE.md  PUBLISH.md  __init__.py  bio.md  jobs.py  render.py  test___init__.py  test_jobs.py  test_render.py
features/studio_agent/: CLAUDE.md  (+6 more)
scripts/: build.py  dev.py  generate.py  migrate_ads_yaml_v2.py  pipeline.py
shared/: __init__.py  visual_regression.py
tests/: conftest.py  test_ads_config.py  test_build_cli.py  test_copy_parity.py  test_generate.py  test_migrate_ads_yaml_v2.py  test_packaging.py  test_pipeline.py  test_tokens_truth.py  test_tokens_ui_parity.py  test_visual_regression.py
(+164 files in other folders)
